# to_gather_app/api/activity.py
@@ -1,10 +1,12 @@
 import datetime
-from flask import jsonify, request, current_app, url_for
+from flask import jsonify, request, current_app
 from . import api
 from .. import db
-from ..models import User, Activity, Message
+from ..models import User, Activity, Message, Picker2Activity
+from ..exceptions import ActivityError
+from _internal import _get_records
 
-require = ("year", "month", "day", "location", "event", "question", "time")
+require = ("year", "month", "day", "location", "event", "question", "tel", "qq" "time")
 
 @api.route("/activity/post/", methods=["POST"], endpoint="ActivityPost")
 @User.check
@@ -23,6 +25,128 @@ def activity_post(info):
 @api.route("/activity/<int:aid>/", methods=["GET", "POST", "PUT"], endpoint="ActivityEntity")
 @User.check
 def activity_entity(info):
+    aid = int(request.values.get("aid"))
+    act = Activity.query.filter_by(id=aid).first()
+    if act is None:
+        return jsonify({"msg": "activity not existed"}), 406
+
     if request.method == "GET":
-        act = Activity.query.filter_by(id=request.values.get('aid')).first()
-        
+        if act.date < datetime.date.today():
+            act.close = True
+            del act.info
+        if act.close:
+            return jsonify({"msg": "activity is closed"}), 403
+        return jsonify(act.info), 200
+    
+    if request.method == "POST":
+        if info.get("id") == act.poster_id:
+            return jsonify("msg": "can't pick your self"), 407
+        record = Picker2Activity.query.filter_by(picker_id=info.get("id"), aid=aid).first()
+        if record is not None:
+            return jsonify({"msg": "already pick it before"}), 402
+        if act.close:
+            return jsonify({"msg": "activity is closed"}), 403
+        if not act.pickable:
+            return jsonify({"msg": "pick is over"}), 405
+        Message.init(request.args.get("aid"), info.get("id"), request.get_json().get("answer"))
+        return jsonify({"msg": "pick successful!"}), 200
+    
+    if request.method == "PUT":
+        if info.get("id") == act.poster_id:
+            return jsonify("msg": "can't pick your self"), 407
+        if act.close:
+            return jsonify({"msg": "activity is closed"}), 403
+        if not act.pickable:
+            return jsonify({"msg": "pick is over"}), 405
+        if not request.values.get("atti"):
+            return jsonify({"msg": "pick be refused"}), 201
+        if act.poster_id != info.get("id"):
+            return jsonify({"msg": "please modify your self activity"}), 401
+        try:
+            act.info = request.values.get("pickerID")
+        except ActivityError:
+            return jsonify({"msg": "picking error"}), 405
+        else:
+            records = Picker2Activity.query.filter_by(aid=aid).all()
+            for record in records:
+                if record.waiting:
+                    record.waiting = False
+                    record.fail = True
+                    db.session.add(record)
+            db.session.commit()
+        return jsonify({"msg": "picking is over!"}), 200       
+
+@api.route("/activity/pickable/list/", methods=["GET"], endpoint="PickableList")
+def pickable_list():
+    page = request.values.get("page")
+    _data = _get_records(Activity, Activity.pickable, True, page)
+    if _data["rowsNum"] == 0:
+        return jsonify({"msg": "none activity"}), 201
+    data = []
+    for activity in _data["activityList"]:
+        data.append({
+            "activityID": activity.id,
+            "datetime": str(activity.date) + activity.time,
+            "event": activity.event
+        })
+    _data["activityList"] = data
+    return jsonify(_data), 200
+
+@api.route("/user/<string:unum>/post-activities/list/", methods=["GET"], endpoint="PostList")
+@User.check
+def post_list(info):
+    unum = request.values.get("unum")
+    page = request.values.get("page")
+    usr = User.query.filter_by(std_num=unum).first()
+    if usr is None: 
+        return jsonify({"msg": "user not existed!"}), 406
+    if usr.id != info.get("id"):
+        return jsonify({"msg": "please check your self information"}), 407
+    _data = _get_records(Activity, Activity.poster_id, usr.id, page)
+    if _data["rowsNum"] == 0:
+        return jsonify({"msg": "you have posted nothing"}), 201
+    data = []
+    for activity in _data["activityList"]:
+        hasMessages = True
+        msgs = Message.query.filter_by(aid=activity.id, readed=False).all()
+        if msgs is None or []:
+            hasMessages = False
+        data.append({
+            "activityID": activity.id,
+            "datetime": str(activity.date) + activity.time,
+            "event": activity.event,
+            "close": activity.close,
+            "hasMessage": hasMessages
+        })
+    _data["activityList"] = data
+    return jsonify(_data), 200
+
+@api.route("/user/<string:unum>/pick-activities/list/", methods=["GET"], endpoint="PickList")
+@User.check
+def pick_list(info):
+    unum = request.values.get("unum")
+    page = request.values.get("page")
+    usr = User.query.filter_by(std_num=unum).first()
+    if usr is None: 
+        return jsonify({"msg": "user not existed!"}), 406
+    if usr.id != info.get("id"):
+        return jsonify({"msg": "please check your self information"}), 407
+    _data = _get_records(Picker2Activity, Picker2Activity.picker_id, usr.id, page)
+    if _data["rowsNum"] == 0:
+        return jsonify({"msg": "you have posted nothing"}), 201
+    data = []
+    for activity in _data["activityList"]:
+        if activity.waiting:
+            statu = 0
+        elif activity.fail:
+            statu = 2
+        else:
+            statu = 1
+        data.append({
+            "activityID": activity.id,
+            "datetime": str(activity.date) + activity.time,
+            "event": activity.event,
+            "statu": statu
+        })
+    _data["activityList"] = data
+    return jsonify(_data), 200
